--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,7 @@
+html {
+	font-size: 100%;
+}
+
 body {
 	background-image: linear-gradient(
 		to right,
@@ -6,4 +10,14 @@ body {
 	);
 
 	min-height: 100vh;
+}
+
+.app {
+	width: 52rem;
+	height: 36rem;
+
+	border: 2px solid black;
+	background: rgb(31, 41, 55);
+
+	border-radius: 0.75rem;
 }
