--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,12 @@ html {
 }
 
 body {
+	color: rgb(237, 237, 237);
+
+	font-size: 18px;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
 	background-image: linear-gradient(
 		to right,
 		rgb(248, 113, 133),
@@ -10,6 +16,10 @@ body {
 	);
 
 	min-height: 100vh;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .app {
