--- a/css/app.css
+++ b/css/app.css
@@ -28,6 +28,15 @@ body {
 
 	border: 2px solid black;
 	background: rgb(31, 41, 55);
-
 	border-radius: 0.75rem;
+
+	display: flex;
+	flex-direction: row;
+
+	overflow: hidden;
+}
+
+aside,
+main {
+	padding: 1.25rem;
 }
