--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -10,7 +10,37 @@ aside {
 .controls button {
 	width: 1rem;
 	height: 1rem;
+
 	margin: 0.25rem;
+
+	border: 1px solid rgba(0, 0, 0, 0.6);
 	background: yellow;
 	border-radius: 1rem;
+}
+
+.controls .close {
+	background: rgb(248, 113, 113);
+}
+
+.controls .close:hover,
+.controls .close:active {
+	background: rgb(239, 68, 68);
+}
+
+.controls .minimize {
+	background: rgb(252, 211, 77);
+}
+
+.controls .minimize:hover,
+.controls .minimize:active {
+	background: rgb(245, 158, 11);
+}
+
+.controls .maximize {
+	background: rgb(52, 211, 153);
+}
+
+.controls .maximize:hover,
+.controls .maximize:active {
+	background: rgb(16, 185, 129);
 }
