--- a/css/content.css
+++ b/css/content.css
@@ -2,3 +2,25 @@ main {
 	width: 66.666667%;
 	border-left: 2px solid black;
 }
+
+.add-new {
+	display: flex;
+	justify-content: flex-end;
+}
+
+.add-new button {
+	font-size: 1.5rem;
+	border-radius: 0.375rem;
+
+	padding: 0.215rem 0.575rem 0.425rem 0.5rem;
+	margin-bottom: 0.75rem;
+
+	position: relative;
+	bottom: 0.275rem;
+	right: -0.275rem;
+}
+
+.add-new button:hover,
+.add-new button:active {
+	background: rgb(55, 65, 81);
+}
