--- a/css/content.css
+++ b/css/content.css
@@ -6,6 +6,7 @@ main {
 .add-new {
 	display: flex;
 	justify-content: flex-end;
+	margin-bottom: 1.25rem;
 }
 
 .add-new button {
@@ -13,7 +14,6 @@ main {
 	border-radius: 0.375rem;
 
 	padding: 0.215rem 0.575rem 0.425rem 0.5rem;
-	margin-bottom: 0.75rem;
 
 	position: relative;
 	bottom: 0.275rem;
@@ -23,4 +23,27 @@ main {
 .add-new button:hover,
 .add-new button:active {
 	background: rgb(55, 65, 81);
+}
+
+/* TITLES */
+h1 {
+	font-size: 2.25rem;
+	font-family: "Arial Rounded MT Bold";
+	margin-bottom: 1.725rem;
+}
+
+h1.today {
+	color: rgb(96, 165, 250);
+}
+
+h1.scheduled {
+	color: rgb(239, 68, 68);
+}
+
+h1.all {
+	color: rgb(156, 163, 175);
+}
+
+h1.flagged {
+	color: rgb(245, 158, 11);
 }
