--- a/css/content.css
+++ b/css/content.css
@@ -29,7 +29,7 @@ main {
 h1 {
 	font-size: 2.25rem;
 	font-family: "Arial Rounded MT Bold", "Nunito", sans-serif;
-	margin-bottom: 1.725rem;
+	margin-bottom: 1.5rem;
 
 	display: none;
 }
@@ -52,7 +52,34 @@ h1.flagged {
 }
 
 /* TODOS */
+.todos li {
+	display: flex;
+	line-height: 1.25;
+}
+
 .todos p {
 	padding: 0.625rem 0;
 	border-bottom: 1px solid rgb(55, 65, 81);
+	flex-grow: 1;
+}
+
+.todos svg {
+	flex: none;
+
+	width: 2rem;
+	height: 2rem;
+
+	margin-top: 0.425rem;
+	margin-right: 0.425rem;
+
+	stroke: rgb(28, 34, 43);
+	stroke-width: 1;
+	fill: rgb(55, 65, 81);
+
+	cursor: pointer;
+}
+
+.todos svg:hover,
+.todos svg:active {
+	fill: rgb(251, 191, 36);
 }
