--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -107,3 +107,43 @@ nav .flagged:hover,
 nav .flagged:active {
 	background: rgb(var(--color-flagged));
 }
+
+/* NAV ICONS */
+
+nav p {
+	display: flex;
+	justify-content: space-between;
+}
+
+nav svg {
+	width: 2.25rem;
+	height: 2.25rem;
+	border-radius: 2.25rem;
+
+	stroke: white;
+	fill: white;
+
+	padding: 0.5rem;
+	margin-bottom: 0.375rem;
+}
+
+.today svg {
+	background-color: rgb(var(--color-today));
+}
+
+.scheduled svg {
+	background-color: rgb(var(--color-scheduled));
+}
+
+.all svg {
+	background-color: rgb(var(--color-all-darker));
+}
+
+.flagged svg {
+	background-color: rgb(var(--color-flagged));
+}
+
+nav span {
+	font-size: 1.5rem;
+	line-height: 2.25rem;
+}
